hopefully final commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="sms:5176109922&amp;body=test" style="display:none" id="loadSMS"></a>
+    <a href="sms:5176109922" style="display:none" id="loadSMS"></a>
     <script src="assets/java.js"></script>
 </body>
 </html>
